--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -1,197 +1,165 @@
 
-@Article{Pablo,
-  title = {Scripting smart contracts for distributed ledger technology},  
-  author = {Pablo Lamela Seijas {,} Simon Thompson and Darryl McAdams},
-  volume = 30,
-  year = 2016,
-   month = 12
-  
-} 
-@Article{Matthew,
-	title = {Block Chain Technologies and The Semantic Web:
-	A Framework for Symbiotic Development},  
-	author = {Matthew English{,} Soeren Auer{,} John Domingue},
-	volume = 15,
-	year = 2016
-
-}, 
-
-@review{Christidis,
+@article{Pablo,
+      author = {Pablo Lamela Seijas and Simon Thompson and Darryl McAdams},
+      title = {Scripting smart contracts for distributed ledger technology},
+      howpublished = {Cryptology ePrint Archive, Paper 2016/1156},
+      journal={Cryptology ePrint Archive},
+      year = {2016},
+      url = {https://eprint.iacr.org/2016/1156}
+},
+@inproceedings{english2016block,
+  title={Block chain technologies \& the semantic web: A framework for symbiotic development},
+  author={English, Matthew and Auer, S{\"o}ren and Domingue, John},
+  booktitle={Computer Science Conference for University of Bonn Students},
+  url = {http://cscubs.cs.uni-bonn.de/2016/proceedings/paper-10.pdf},
+  volume={47},
+  pages={61},
+  year={2016}
+},
+ 
+@article{Christidis,
 	author={Konstantinos Christidis{,} Michael Devetsikiotis},
 	title = {Blockchains and Smart Contracts for
 	the Internet of Things},
 	journal = {Spacial section on the plethora of research in internet of thing (IoT)},
+    publisher = IEEE,
 	volume = 12,
-	year = 2016,
-    month = 3 
+    pages = {2292 -- 2303},
+    year = {2016},
+    month = {3}, 
+    DOI = {10.1109/ACCESS.2016.2566339},
 },
 
 @article{Valentina,
 	author = {Valentina Gatteschi{,} Fabrizio Lamberti{,} Claudio Demartini{,} Chiara Pranteda{,} and Victor Santamaria}, 
 	title  = {Blockchain and Smart Contracts for Insurance: Is the
 	Technology Mature Enough?},
-	journal = {The name of the journal},
-	year = 2018, 
-	volume  = 16 ,
-	month = 12
+    publisher = {MDPI Open Access Journals},
+    volume  = {16},
+    year = {2018}, 
+	month = {2},
+    DOI = {https://doi.org/10.3390/fi10020020}, 
 },
 
-@article{Ruta,
+@inproceedings{Ruta,
 	author = {Michele Ruta{,} Floriano Scioscia{,} Saverio Ieva{,}
 	Giovanna Capurso{,} Agnese Pinto{,} and Eugenio Di Sciascio}, 
 	title = {A Blockchain Infrastructure for the Semantic
 	Web of Things},
+    howpublished = {Sistemi Evoluti per Basi di Dati},
 	url = {http://ceur-ws.org/Vol-2161/paper6.pdf},
-	volume = 12,
-	month = 1,
-	year = 2018 
+    booktitle={SEBD},
+	volume = {12},
+	month = {1},
+	year = {2018} 
 },
 
 @article{Hex,
-	author = {Lin William Congy{,} Zhiguo Hex}, 
-	title  = {Blockchain Disruption and Smart Contracts},
-	url = {http://ceur-ws.org/Vol-2161/paper6.pdf}, 
-	volume = 12,
-	month = 2,
-	year = 2018
+  title={Blockchain disruption and smart contracts},
+  author={Cong, Lin William and Hex, Zhiguo},
+  journal={The Review of Financial Studies},
+  volume={32},
+  number={5},
+  pages={1754--1797},
+  year={2019},
+  publisher={Oxford University Press}
 },
 
 @article{Vitalik,
-	author = {Vitalik Buterin}, 
-	title = {A Next generation smart contract & decentrlized application platform},
-	volume = 36,
-	url = {http://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf}, 
-	month = 2,
-	year = 2018
+  title={A next-generation smart contract and decentralized application platform},
+  author={Buterin, Vitalik and others},
+  journal={white paper},
+  volume={3},
+  number={37},
+  pages={2--1},
+  year={2014}
 },
 
 @article{Wesley,
-	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk and Arthur van Rijsewijk}, 
-	title = {Replacing Paper Contracts With Ethereum
-	Smart Contracts},
-	url =  {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
-	volume = 35, 
-	month = 12,
-	year = 2016
-},
+  title={Replacing paper contracts with Ethereum smart contracts},
+  author={Egbertsen, Wesley and Hardeman, Gerdinand and van den Hoven, Maarten and van der Kolk, Gert and van Rijsewijk, Arthur},
+  journal={Semantic Scholar},
+  volume={35},
+  pages={1--35},
+  year={2016}
+}
 
 @article{Hector,
 	author = {Hector Ugarte}, 
 	title = {A more pragmatic Web 3.0: Linked Blockchain Data},
 	url = {https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf}, 
-	doi= {10.13140/RG.2.2.10304.12807/1},
-	volume = 15, 
-	month = 1,
-	year = 2017
+	doi= {DOI:10.13140/RG.2.2.10304.12807/1},
+    journal= {Bonn, Germany},
+	volume = {15}, 
+	month = {4},
+	year = {2017}
 },
 
 @article{Jose,
-	author = {Jose Luis Romero Ugarte}, 
-	title = {Distributed ledger technology},
-	volume = 11, 
-	month = 11,
-	year = 2018
-},
-@article{Kalra,
-	author = {Sukrit Kalra{,} Seep Goel{,} Mohan Dhawan{,} Subodh Sharma},  
-	title = {ZEUS: Analyzing Safety of Smart Contracts},
-	url = {http://dx.doi.org/10.14722/ndss.2018.23082}, 
-	volume = 15, 
-	month = 2,
-	year = 2018
+  title={Distributed ledger technology},
+  author={Sunyaev, Ali and Sunyaev, Ali},
+  journal={Internet computing: Principles of distributed systems and emerging internet-based technologies},
+  pages={265--299},
+  year={2020},
+  publisher={Springer}
 },
 
-@review{Panarello,
-	author = {Alfonso Panarello{,} Nachiket Tapas{,} Giovanni Merlino{,} Francesco Longo and Antonio Puliafito},  
-	title = {Blockchain and IoT Integration: A Systematic Survey},
-	url = {https://arxiv.org/pdf/1906.00245}, 
-	volume = 37, 
-	month = 8,
-	year = 2018
+@inproceedings{kalra,
+  title={Zeus: analyzing safety of smart contracts.},
+  author={Kalra, Sukrit and Goel, Seep and Dhawan, Mohan and Sharma, Subodh},
+  booktitle={Ndss},
+  pages={1--12},
+  year={2018}
 },
 
-@article{Bachler,
-	author = {Allan Third{,} Kevin Quick{,} Michelle Bachler{,} John Domingue},  
-	title = {Benchmarking LinkChains: Performance of
-	Blockchain-backed Trustworthy Linked Data},
-	url = {https://pdfs.semanticscholar.org/ffae/f7f3604fb4e97a39b9032928b47fa422099c.pdf}, 
-	volume = 12 
+@article{panarello,
+  title={Blockchain and iot integration: A systematic survey},
+  author={Panarello, Alfonso and Tapas, Nachiket and Merlino, Giovanni and Longo, Francesco and Puliafito, Antonio},
+  journal={Sensors},
+  volume={18},
+  number={8},
+  pages={2575},
+  year={2018},
+  publisher={MDPI}
+},
 
-},
-@article{Grishchenko,
-	author = {Ilya Grishchenko{,} Matteo Maffei{,} and Clara Schneidewind},  
-	title = {Foundations and Tools for the Static Analysis
-	of Ethereum smart contracts},
-	url = {https://www.netidee.at/sites/default/files/2018-07/cav2018.pdf}, 
-	volume = 25,
-	year = 2018 	
-},
 @article{Rashid,
- 	author = {Umar Rashid{,} Allan Third{,} John Domingue},  
- 	title = {Web Service for Semantic Negotiation of Smart Contracts},
- 	url = {https://openreview.net/forum?id=BJg2gCu1e7}, 
- 	volume = 6,
- 	year = 2018,
- 	month = 1 	
+   author = {Umar Rashid{,} Allan Third{,} John Domingue},  
+   title = {Web Service for Semantic Negotiation of Smart Contracts},
+   url = {https://openreview.net/forum?id=BJg2gCu1e7.}, 
+   publisher = {ISWC 2018 DeSemWeb Comment},
+   volume = {6},
+   year = {2018},
+   month = {6},	
  },
-
-@conference{Sopek,
-	author = {Mirek Sopek{,} Przemyslaw Gradzki{,} Witold Kosowski {,} Dominik Kozuski{,} Rafa Troczak{,} Robert Trypuz}, 
-	title = {Companion Proceedings of the The Web Conference 2018},
-	
-	booktitle = {GraphChain – A Distributed Database with Explicit Semantics and Chained RDF Graphs},
-	year = 2018,
-	volume = 8,
-	month = 5,
-	year = {https://doi.org/10.1145/3184558.3191554},
-	page = {1171-1178},
-	doi = {10.1145/3184558.3191554}   
+@inproceedings{Sopek,
+  title={Deriving validity time in knowledge graph},
+  author={Mirek Sopek{,} Przemyslaw Gradzki{,} Witold Kosowski {,} Dominik Kozuski{,} Rafa Troczak{,} Robert Trypuz},
+  booktitle={Companion proceedings of the the web conference 2018},
+  pages={1771--1776},
+  year={2018},
+  month = {5},
+  doi = {https://doi.org/10.1145/3184558.3191639},
+  volume = {8},
 },
 
-@conference{Third,
-	author = {Allan Third{,} John Domingue}, 
-	title = {Linked Data Indexing of Distributed Ledgers},
-	
-	booktitle = {Companion Proceedings of the 26th International Conference on World Wide Web Companion },
-	year = 2017,
-	volume = 8,
-	month = 5,
-	page = {1431-1436},
-	doi = {10.1145/3041021.3053895}   
+@inproceedings{Third,
+    title={Linked data indexing of distributed ledgers},
+    author={Third, Allan and Domingue, John},
+    booktitle={Proceedings of the 26th International Conference on World Wide Web Companion},
+    pages={1431--1436},
+    year={2017},
+	month = {5},
+    publisher = {ACM Digital Library home},
+	doi = {https://doi.org/10.1145/3041021.3053895}   
 },
 
-@article{Zdun,
-	author = {Maximilian Wöhrer and Uwe Zdun},  
-	title = {Smart Contracts: Securlty Patterns in the Ethereum
-	Ecosystem and Solidity},
-	url = {  https://eprints.cs.univie.ac.at/5433/7/sanerws18iwbosemain-id1-p-380f58e-35576-preprint.pdf.}, 
-	volume = 7,
-	year = 2018,
- 	
-},
-
-@article{Baqa, 
-author = {Hamza Baqa{,} Nguyen B.Truongy{,} Noel Crespi{,} Gyu Myoung Leex{,} Franck Le Gall},  
-title = {Semantic Smart Contracts for Blockchain-based
-Services in the Internet of Things},
-url = {http://researchonline.ljmu.ac.uk/id/eprint/11315/}, 
-volume = 5,
-year = 2019,
-
-},
-
-@masterthesis{Markos, 	
-	author = {Kalimeris Markos},  
-	title = {Indexes for Blockchain Data},
-	volume = 102,
-	year = 2019,
-	month = 2
-	
-},
 @book{Natarajan,
   title = {Distributed Ledger Technology(DLT) and Blockchain},
   author = {Natarajan{,} Harish{,} Krause{,} Solvej{,} Gradstein{,} Helen},
   year = {2017},
+  volume = {60},
+  URI = {http://hdl.handle.net/10986/29053},
   publisher = {World Bank Group},
 },
 
@@ -199,164 +167,185 @@ year = 2019,
   title = {Blockchain for dummies},
   author = {Manav Gupta},
   year = {2018},
+  URL = {https://www.ibm.com/downloads/cas/D8O9VBAK},
+  volume = {51},
   publisher = {John Wiley},
 },
-@article{Coyla, 
-author = {Karen Coyle},  
-title = {Semantic Web and Linked Data},
-url = {https://journals.ala.org/ltr/article/view/4669/5539}, 
-volume = 5,
-year = 2012,
 
+@article{Coyle,
+  title={Semantic web and linked data},
+  author={Coyle, Karen},
+  journal={Library technology reports},
+  volume={48},
+  number={4},
+  pages={10--14},
+  year={2012}
 },
-@article{Kujur, 
-author = {Bijoy Chhetrin{,} Pranay Kujur},  
-title = {Evolution of World Wide Web},
-url = {https://www.researchgate.net/publication/280944777}, 
-volume = 6,
-year = 2015,
 
+@article{Kujur,
+  title={Evolution of the world wide web: From WEB 1.0 TO WEB 4.0},
+  author={Aghaei, Sareh and Nematbakhsh, Mohammad Ali and Farsani, Hadi Khosravi},
+  journal={International Journal of Web \& Semantic Technology},
+  volume={3},
+  number={1},
+  pages={1--10},
+  year={2012},
+  publisher={Academy \& Industry Research Collaboration Center (AIRCC)}
 },
 
 @article{Luke, 
-author = {Max Luke{,} Anna Dimitrova{,} Stephen James Lee{,} Zdenek Pekarek},  
-title = {Blockchain in Electricity: a Critical Review of Progress to Date},
-url = {https://www.researchgate.net/publication/332138382}, 
-volume = 38,
-year = 2018,
-
+  title={Blockchain in electricity: a critical review of progress to date},
+  author = {Max Luke{,} Anna Dimitrova{,} Stephen James Lee{,} Zdenek Pekarek},  
+  url = {https://www.researchgate.net/publication/332138382}, 
+  journal={NERA Econ. Consult. eurelectric},
+  volume = {36},
+  year = {2018},
 },
-@article{Aithal, 
-author = {P.K. Paul{,} P.S. Aithal{,} Ricardo Saavedra{,} Surajit Ghosh}, title = {Blockchain Technology and its Types},
-url = {https://www.researchgate.net/publication/359051731}, 
-volume = 13,
-year = 2021,
 
+@article{Aithal,
+  title={Blockchain Technology and its Types—A Short Review},
+  author={Paul, P and Aithal, PS and Saavedra, Ricardo},
+  journal={International Journal of Applied Science and Engineering (IJASE)},
+  volume={9},
+  number={2},
+  pages={189--200},
+  year={2021}
 },
+
 @article{Dilhara, 
-author = {Shashie Dilhara},  
-title = {A Review on Application of Hash Functions and Digital signatures in the
-Blockchain Industry},
-url = {https://www.researchgate.net/publication/354700341}, 
-volume = 5,
-year = 2021,
-
-},
-@article{William, 
-author = {William Metcalfe},  
-title = {Ethereum, Smart Contracts, DApps},
-url = {https://doi.org/10.1007/978-981-15-3376-1_5}, 
-volume = 17,
-year = 2020,
-
-},
-@article{Payrott, 
-author = {Sebastian Payrott},  
-title = {introduction to Ethereum and Smart Contracts},
-url = {https://auth0.com/blog/an-introduction-to-ethereum-and-smart-contracts-part-2/}, 
-volume = 68,
-year = 2017,
-
+  author = {Shashie Dilhara},  
+  title = {A Review on Application of Hash Functions and Digital signatures in the Blockchain Industry},
+  publisher = {researchGate},
+  url = {https://www.researchgate.net/publication/354700341}, 
+  volume = {5},
+  year = {2021},
+  month = {11},
 },
 
-@article{Tassilo, 
-author = {Tassilo Pellegrini},  
-title = {Detecting Licensing Conflicts with DALICC},
-url = {http://ffhoarep.fh-ooe.at/bitstream/123456789/1025/1/Panel_120_ID_193.pdf}, 
-volume = 5,
-year = 2017,
-
+@article{William,
+  title={Ethereum, smart contracts, DApps},
+  author={Metcalfe, William and others},
+  journal={Blockchain and Crypt Currency},
+  volume={77},
+  year={2020},
+  publisher={Springer Singapore}
 },
-@article{Anna, 
-author = {Anna Fensel{,} Tassilo Pellegrini{,} Simon Steyskal{,} Oleksandra Panasiuk},  
-title = {Automated Rights Clearance Using Semantic Web Technologies},
-year = 2018,
-volume = 16,
-doi = {10.1007/978-3-662-55433-3_14}, 
 
+@inproceedings{Payrott,
+  title={Towards analyzing the complexity landscape of solidity based ethereum smart contracts},
+  author={Heged{\H{u}}s, P{\'e}ter},
+  booktitle={Proceedings of the 1st International Workshop on Emerging Trends in Software Engineering for Blockchain},
+  publisher = {ACM Digital Library home},
+  pages={35--39},
+  year={2018}
 },
+
+@article{Tassilo,
+  title={DALICC: a license management framework for digital assets},
+  author={Pellegrini, Tassilo and Havur, Giray and Steyskal, Simon and Panasiuk, Oleksandra and Fensel, Anna and Mireles, Victor and Thurner, Thomas and Polleres, Axel and Kirrane, Sabrina and Sch{\"o}nhofer, Andrea},
+  journal={Proceedings of the Internationales Rechtsinformatik Symposion (IRIS)},
+  volume={10},
+  year={2019}
+},
+
+@article{Anna,
+  title={Automated rights clearance using semantic web technologies: The DALICC framework},
+  author={Pellegrini, Tassilo and Mireles, Victor and Steyskal, Simon and Panasiuk, Oleksandra and Fensel, Anna and Kirrane, Sabrina},
+  journal={Semantic Applications: Methodology, Technology, Corporate Use},
+  pages={203--218},
+  year={2018},
+  publisher={Springer}
+}
 @article{Dworkin, 
-Author = {Morris J.Dworkin},  
-title = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
-doi = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
-url = {https://www.nist.gov/publications/sha-3-standard-permutation-based-hash-and-extendable-output-functions},
-volume = 37,
-year = 2015,
-
+  Author = {Morris J.Dworkin},  
+  title = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
+  doi = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
+  url = {https://www.nist.gov/publications/sha-3-standard-permutation-based-hash-and-extendable-output-functions},
+  publisher={Morris J. Dworkin},
+  volume ={37},
+  year = {2015},
 },
-@article{Ozsu, 
-	author = {Tamer Özsu},  
-	title = {Distrubuted database systems},
-	url = {https://www.researchgate.net/publication/228806512_Distributed_Database_Systems}, 
-	volume = 25,
-	year = 2002,
-	
+@article{ozsu,
+  title={Distributed and parallel database systems},
+  author={{\"O}zsu, M Tamer and Valduriez, Patrick},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={28},
+  number={1},
+  pages={125--128},
+  year={1996},
+  publisher={ACM New York, NY, USA}
 },
-@article{Ilya, 
-	author = {Ilya Grishchenko{,} Matteo Maffei{,} and Clara Schneidewind},  
-	title = {A Semantic Framework for the Securlty Analysis of Ethereum Smart Contracts},
-	doi = {https://doi.org/10.1007/978-3-319-89722-6_10}, 
-	volume = 27,
-	year = 2018,
-	
+@inproceedings{Ilya,
+  title={A semantic framework for the security analysis of ethereum smart contracts},
+  author={Grishchenko, Ilya and Maffei, Matteo and Schneidewind, Clara},
+  booktitle={Principles of Security and Trust: 7th International Conference, POST 2018, Held as Part of the European Joint Conferences on Theory and Practice of Software, ETAPS 2018, Thessaloniki, Greece, April 14-20, 2018, Proceedings 7},
+  pages={243--269},
+  year={2018},
+  organization={Springer}
 },
 @article{Egbertsen, 
 	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk and Arthur van ijsewijk},  
 	title = {Replacing Paper Contracts With Ethereum Smart Contracts Contract Innovation with Ethereum},
-	url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
-	volume = 35,
-	year = 2016,
-	
+	url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf},
+    journal={Semantic Scholar},
+    volume={35},
+    pages={1--35},
+    year={2016}
 },
 @article{Gavin, 
-	author = {DR.Gavin Wood},  
-	title = {Ethereum: A secure decentralized generalised transaction ledger},
-	url = {https://gavwood.com/paper.pdf}, 
-	volume = 34,
-	year = 2017,
-	
+  title={Ethereum: A secure decentralised generalised transaction ledger},
+  author={Wood, Gavin and others},
+  journal={Ethereum project yellow paper},
+  volume={151},
+  number={2014},
+  pages={1--32},
+  year={2014}
 },
-@article{Kim, 
-	author = {Henry M. Kim{,} Marek Laskowski},  
-	title = {Toward an ontology‐driven blockchain design for supply‐chain provenance},
-	doi = {doi: 10.1002/isaf.1424}, 
-	volume = 18,
-	year = 2018,
-	
+@article{Kim,
+  title={Toward an ontology-driven blockchain design for supply-chain provenance},
+  author={Kim, Henry M and Laskowski, Marek},
+  journal={Intelligent Systems in Accounting, Finance and Management},
+  volume={25},
+  number={1},
+  pages={18--27},
+  year={2018},
+  publisher={Wiley Online Library}
 },
-@article{Baran, 
-	author = {Paul Baran},  
-	title = {On distributed networks},
-	url = {https://web.stanford.edu/class/cs244/papers/DistributedCommunicationsNetworks.pdf}, 
-	volume = 51,
-	year = 1964,
-	
+@article{Baran,
+  title={On distributed communications networks},
+  author={Baran, Paul},
+  journal={IEEE transactions on Communications Systems},
+  volume={12},
+  number={1},
+  pages={1--9},
+  year={1964},
+  publisher={IEEE}
 },
-@article{Masood, 
-	author = {Faraz Masood},  
-	title = {An Overview of Distributed Ledger Technology and its Applications},
-	doi = {10.26438/ijcse/v6i10.422427}, 
-	volume = 7,
-	year = 2018,
-	
+@article{Masood,
+  title={An overview of distributed ledger technology and its applications},
+  author={Masood, Faraz and Faridi, Arman Rasool},
+  journal={International Journal of Computer Sciences and Engineering},
+  volume={6},
+  number={10},
+  pages={422--427},
+  year={2018}
 },
 @article{Szabo, 
 	author = {Nick Szabo},  
 	title = {Smart Contracts: Building Blocks for Digital Markets},
 	url = {http://www.truevaluemetrics.org/DBpdfs/BlockChain/Nick-Szabo-Smart-Contracts-Building-Blocks-for-Digital-Markets-1996-14591.pdf}, 
-	volume = 11,
-	year = 2018,
-	
+     journal={URL: http://www. fon. hum. uva. nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo. best. vwh. net/smart\_ contracts\_2. html (дата обращения: 30 июля 2018 г.)},
+	volume = {11},
+	year = {2017},
 },
-@article{Tim, 
-	author = {Christian Bizer{,} Freie Universitat Berlin{,} Germany Tom Heath{,} Talis Information Ltd{,} United Kingdom Tim Berners-Lee{,} Massachusetts Institute of Technology{,} USA},  
-	title = {Linked Data - The Story So Far},
-	doi = {10.4018/jswis.2009081901 · Source: OAI}, 
-	volume = 27,
-	year = 2009,
-	
-},
-
+@incollection{Tim,
+  title={Linked data: The story so far},
+  author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
+  booktitle={Semantic services, interoperability and web applications: emerging concepts},
+  pages={205--227},
+  year={2011},
+  publisher={IGI global}
+}
 
 
 
